test/cases/compile_errors/reify_typeOf_with_no_arguments.zig
export fn entry() void {
    _ = @TypeOf();
}

// error
// backend=stage2
// target=native
//
// :2:9: error: expected at least 1 argument, found 0
